feat/add-update-and-delete-prediction-and-swagger-documentation
