# src/swagger.yaml
@@ -7,6 +7,7 @@ info:
     email: petar.dzhunov94@gmail.com
 servers:
   - url: http://localhost:3000/
+
 paths:
   /users:
     get:
@@ -151,17 +152,12 @@ paths:
                   $ref: '#/components/schemas/Prediction'
   /predictions:
     get:
+      security:
+        - bearerAuth: []
       summary: Get all predictions
       description: Retrieve a list of all predictions.
       tags:
         - Predictions
-      parameters:
-        - in: path
-          name: token
-          required: true
-          description: Token of the user to retrieve predictions.
-          schema:
-            type: string
       responses:
         '200':
           description: A list of predictions.
@@ -171,7 +167,82 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Prediction'
+    post:
+      security:
+        - bearerAuth: []
+      summary: Create a new prediction
+      description: Create a new prediction with the provided information.
+      tags:
+        - Predictions
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PredictionInput'
+      responses:
+        '201':
+          description: Prediction created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Prediction'
+        '400':
+          description: Bad Request. Invalid prediction data provided.
+        '404':
+          description: Not Found. User or match not found.
+        '409':
+          description: Conflict. User can have only one prediction per match.
+    put:
+      security:
+        - bearerAuth: []
+      summary: Update prediction
+      description: Update prediction with the provided information.
+      tags:
+        - Predictions
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PredictionInput'
+      responses:
+        '201':
+          description: Prediction created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Prediction'
+        '400':
+          description: Bad Request. Invalid prediction data provided.
+        '404':
+          description: Not Found. User or match not found.
+        '409':
+          description: Conflict. User can have only one prediction per match.
+  /predictions/{id}: # Updated endpoint path
+    delete:
+      security:
+        - bearerAuth: []
+      summary: Delete a prediction by ID
+      description: Delete a prediction by its ID.
+      tags:
+        - Predictions
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: ID of the prediction to delete.
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Prediction deleted successfully.
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     User:
       type: object
@@ -217,3 +288,19 @@ components:
           type: string
           format: date-time
           description: The last update date of the prediction.
+    PredictionInput:
+      type: object
+      properties:
+        userId:
+          type: string
+          description: The ID of the user making the prediction.
+        prediction:
+          type: string
+          description: The prediction value.
+        matchId:
+          type: string
+          description: The ID of the match for which the prediction is made.
+      required:
+        - userId
+        - prediction
+        - matchId
